<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/facebook_siva"
    tools:context=".Registracija">

    <LinearLayout
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/plava"
        android:orientation="vertical">

        <TextView
            android:layout_width="333dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:alpha="0.9"
            android:paddingTop="14dp"
            android:shadowColor="@color/black"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="3"
            android:text="@string/ocenite_korisnika"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/naslov"
            android:textColorHint="@color/md_theme_secondaryContainer"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxStrokeColor="@color/md_theme_secondaryContainer"
            app:boxStrokeWidthFocused="1.5dp"
            app:hintTextColor="@color/md_theme_secondaryContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/naslovOcene"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/opis"
            android:textColorHint="@color/md_theme_secondaryContainer"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxStrokeColor="@color/md_theme_secondaryContainer"
            app:boxStrokeWidth="0.9dp"
            app:boxStrokeWidthFocused="1.5dp"
            app:hintTextColor="@color/md_theme_secondaryContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/opisOcena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLines ="7"
                android:maxLength ="2000"
                android:drawableStart="@color/white"
                android:textColor="@color/black"
                android:textColorHint="#615656"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/Zadovoljni"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/zadovolji"
            android:textColor="#040303" />


        <Button
            android:id="@+id/OstaviOcenu"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/ostavi_ocenu"
            android:textColor="@color/plava"
            android:textSize="18sp"
            app:cornerRadius="20dp" />


    </LinearLayout>
</LinearLayout>