<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/facebook_siva"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/plava"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingTop="10dp"
        android:paddingEnd="24dp"
        android:paddingBottom="25dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/loginText"
            android:layout_width="274dp"
            android:layout_height="66dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="10dp"
            android:shadowColor="@color/black"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="3"
            android:text="@string/Login"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:textColorHint="@color/md_theme_secondaryContainer"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxStrokeColor="@color/md_theme_secondaryContainer"
            app:boxStrokeWidth="0.9dp"
            app:boxStrokeWidthFocused="1.5dp"
            app:hintTextColor="@color/md_theme_secondaryContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:textColorHint="@color/md_theme_secondaryContainer"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxStrokeColor="@color/md_theme_secondaryContainer"
            app:boxStrokeWidth="0.9dp"
            app:boxStrokeWidthFocused="1.5dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:hintTextColor="@color/md_theme_secondaryContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/red" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:onClick="login"
            android:text="@string/Login"
            android:textColor="@color/plava"
            android:textSize="18sp"
            app:cornerRadius="20dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/nemate_nalog_registrujte_se"
        android:textColor="@color/plava" />

    <Button
        android:id="@+id/button"
        android:layout_width="227dp"
        android:layout_height="wrap_content"
        android:textColor="@color/plava"
        android:text="@string/registujte_se" />

</LinearLayout>