<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context=".EditProfil">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/facebook_siva"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingTop="10dp"
        android:paddingEnd="24dp"
        android:paddingBottom="24dp">

        <TextView
            android:id="@+id/loginText"
            android:layout_width="279dp"
            android:layout_height="wrap_content"
            android:alpha="0.9"
            android:paddingTop="10dp"
            android:shadowColor="#000000"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="3"
            android:layout_gravity="center"
            android:text="@string/izmenite_profil"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="10dp"
            android:hint="Username"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            android:layout_gravity="center"
            android:textColorHint="@color/plava"
            app:boxStrokeColor="@color/md_theme_secondaryContainer"
            app:boxStrokeWidth="0.9dp"
            app:boxStrokeWidthFocused="1.5dp"
            app:hintTextColor="@color/md_theme_secondaryContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editUsername"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/Telefon"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            android:layout_gravity="center"
            android:textColorHint="@color/plava"
            app:boxStrokeColor="@color/md_theme_secondaryContainer"
            app:boxStrokeWidth="0.9dp"
            app:boxStrokeWidthFocused="1.5dp"
            app:hintTextColor="@color/md_theme_secondaryContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTelefon"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/Mesto"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/black"
            android:textColorHint="@color/plava"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            android:layout_gravity="center"
            app:hintTextColor="@color/md_theme_secondaryContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editMesto"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableStart="@color/white"
                android:drawablePadding="8dp"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:textColorHint="#615656"
                android:textStyle="bold"/>
        </com.google.android.material.textfield.TextInputLayout>


        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/da_li_elite_da_promenite_lozinku"
            android:textColor="#040303" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:hint="@string/password"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/black"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            android:textColorHint="@color/plava"
            android:layout_gravity="center"
            app:hintTextColor="@color/md_theme_secondaryContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editLozinka"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="password"
                android:drawablePadding="8dp"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:textColorHint="#615656"
                android:textStyle="bold"/>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/button2"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:onClick="Nastavi"
            android:text="@string/Nastavite"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="20dp" />

    </LinearLayout>

</LinearLayout>